--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Xillia Name picker</h1>
+    <section class="display">
+        <h3>Enter a character's name from the video game Tales of Xillia.</h3>
+        <input class="choice" type="text">
+        <button class="btn">Click Me!</button>
+        <div class="text"></div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
