--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="display">
         <h3>Enter a character's name from the video game Tales of Xillia.</h3>
         <input class="choice" type="text">
-        <button class="btn">Click Me!</button>
+        <button id="btn">Click Me!</button>
         <div class="text"></div>
     </section>
     <script src="script.js"></script>
