--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Xillia Name picker</h1>
     <section class="display">
         <h3>Enter a character's name from the video game Tales of Xillia.</h3>
-        <input class="choice" type="text">
+        <input id="choice" type="text">
         <button id="btn">Click Me!</button>
         <div class="text"></div>
     </section>
